[workspace]
members = [
    "otrack-core",
    "otrackd",
    "otrack",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
hyprland = "0.4.0-beta.3"
comfy-table = "7.1"
ratatui = "0.26"
crossterm = "0.27"
directories = "5.0"
signal-hook = "0.3"
signal-hook-tokio = "0.3"
futures = "0.3"
